--- a/style.css
+++ b/style.css
@@ -104,3 +104,39 @@ li button {
     background-color: #66bb6a;
     color: #000;
 }
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.task-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #2a2a2a;
+    padding: 10px;
+    margin-top: 8px;
+    border-radius: 6px;
+    color: white;
+}
+
+.priority {
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.alta {
+    background: #ff5252;
+}
+
+.média {
+    background: #ffca28;
+    color: #000;
+}
+
+.baixa {
+    background: #66bb6a;
+    color: #000;
+}
