--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ body {
     background: #1e1e1e;
     padding: 25px;
     width: 320px;
-    border-radius: 14px;
-    box-shadow: 0 15px 35px rgba(0,0,0,0.4);
+    border-radius: 12px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
 }
 
 h1 {
     text-align: center;
-    color: #4fc3f7;
     margin-bottom: 20px;
+    color: #4fc3f7;
 }
 
 input, select {
@@ -33,7 +33,7 @@ input, select {
     margin-bottom: 10px;
     border-radius: 6px;
     border: none;
-    font-size: 14px;
+    outline: none;
 }
 
 button {
@@ -58,20 +58,25 @@ ul {
 
 .task-item {
     background: #2a2a2a;
+    color: white;
     padding: 10px;
     border-radius: 6px;
     margin-bottom: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #fff;
+    transition: 0.3s;
+}
+
+.task-item:hover {
+    transform: scale(1.02);
 }
 
 .task-item button {
     background: transparent;
     color: #ff5252;
-    font-size: 16px;
     border: none;
+    font-size: 16px;
     cursor: pointer;
 }
 
@@ -80,10 +85,12 @@ ul {
     border-radius: 4px;
     font-size: 12px;
     font-weight: bold;
+    margin-left: 8px;
 }
 
 .alta {
     background: #ff5252;
+    color: #fff;
 }
 
 .média {
